--- a/Basic Python Examples.ipynb
+++ b/Basic Python Examples.ipynb
@@ -622,6 +622,58 @@
     "a.argmax()\n",
     "a.argmin()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bin of [0.5] = [1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 4])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Input array\n",
+    "x = np.array([0.5])\n",
+    "\n",
+    "# Bins - 5 bins in total\n",
+    "bins = np.array([0,1,2,3])\n",
+    "\n",
+    "# Digitize function - 0.5 belong to the bin 0<= 0.5 <1 - therefore returned index 1\n",
+    "bin = np.digitize(x,bins)\n",
+    "# array([1], dtype=int64)\n",
+    "\n",
+    "print (\"Bin of {} = {}\".format(x, bin))\n",
+    "# The input array can contain several inputs\n",
+    "x = np.array([-0.5,1,3.5])\n",
+    "\n",
+    "# Digitize function\n",
+    "np.digitize(x,bins)\n",
+    "# array([0, 2, 4], dtype=int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
