--- a/numpy where.ipynb
+++ b/numpy where.ipynb
@@ -140,6 +140,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 22 33]\n",
+      "[ 9 18 27]\n",
+      "[10 40 90]\n",
+      "[10. 10. 10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([10,20,30])\n",
+    "b = np.array([1,2,3])\n",
+    " \n",
+    "print(a+b) # output: [11 22 33]\n",
+    "print(a-b) # output: [ 9 18 27]\n",
+    "print(a*b) # output: [10 40 90]\n",
+    "print(a/b) # output: [10. 10. 10.]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
