--- a/lab-9wk-numpy.ipynb
+++ b/lab-9wk-numpy.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = np.array([1,2,3,4,5,6])"
+    "arr = np.array([1,2,3,4,5])"
    ]
   },
   {
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "3.5"
+       "3.0"
       ]
      },
      "execution_count": 3,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "5"
       ]
      },
      "execution_count": 4,
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "3.5"
+       "3.0"
       ]
      },
      "execution_count": 6,
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "3.5"
+       "3.0"
       ]
      },
      "execution_count": 7,
@@ -122,27 +122,28 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 5 into shape (2,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-6274b4a67d02>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0marr2d\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 5 into shape (2,)"
+     ]
+    }
+   ],
    "source": [
-    "arr2d = arr.reshape((2,3))"
+    "arr2d = arr.reshape((2,))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2., 5.])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.median(arr2d, axis = 1)"
    ]
