--- a/CSV_Data_Processing.ipynb
+++ b/CSV_Data_Processing.ipynb
@@ -25,11 +25,13 @@
     "localurl='April_sensor_data.csv'\n",
     "try:\n",
     "    #df = pd.read_csv(localurl, skiprows = 1)\n",
-    "    df = pd.read_csv(localurl)\n",
-    "    dateparse = lambda dates: [pd.datetime.strptime(d, '%Y-%m-%d %H:%M') for d in dates]\n",
+    "    #df = pd.read_csv(localurl)\n",
+    "    dateparse = lambda dates: [pd.datetime.strptime(d, '%Y-%m-%d %H:%M') for d in dates] \n",
     "    df = pd.read_csv(localurl, parse_dates=['REG_DATE'], date_parser=dateparse)\n",
     "except  OSError as err:\n",
-    "    print(\"OS error: {0}\".format(err))\n"
+    "    print(\"OS error: {0}\".format(err))\n",
+    "except ValueError as err:\n",
+    "    print(\"Value error: {0}\".format(err))\n"
    ]
   },
   {
@@ -291,20 +293,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "df['day-of-week'] = df['REG_DATE'].dt.day_name()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['weekday'] = df['REG_DATE'].dt.day_name()\n",
+    "#df['weekday'] = df['REG_DATE'].dt.dayofweek"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "dayOfWeek={0:'Monday', 1:'Tuesday', 2:'Wednesday', 3:'Thursday', 4:'Friday', 5:'Saturday', 6:'Sunday'}\n",
-    "df['weekday'] = df['REG_DATE'].dt.dayofweek.map(dayOfWeek)"
+    " \n",
+    "df['weekday'] = df['REG_DATE'].dt.dayofweek.map(dayOfWeek)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " df['REG_DATE'].dt.dayofweek.map(dayOfWeek)"
    ]
   },
   {
@@ -538,6 +550,8 @@
    "metadata": {},
    "source": [
     "[가정] 요일별로 공기질의 차이가 있음 \n",
+    "\n",
+    "\n",
     "[방법] \n",
     "- 관찰값 중 금요일과 일요일을 대상으로 공기질의 비교함\n",
     "- 공기질의 비교를 위해 CO2, TVOC, PM2.5의 센서값을 선택함          "
@@ -572,6 +586,18 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 금요일 관측값\n",
+    "df[df['weekday']=='Friday'].head()\n",
+    "\n",
+    "df_friday = df[df['weekday']=='Friday']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -681,45 +707,44 @@
        "1444  Friday  "
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 금요일 관측값\n",
-    "df[df['weekday']=='Friday'].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4320    15.4\n",
-       "4321    15.3\n",
-       "4322    15.3\n",
-       "4323    15.3\n",
-       "4324    15.4\n",
-       "Name: Humidity, dtype: float64"
-      ]
-     },
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 일요일의 Humidity\n",
-    "df['Humidity'][df['weekday']=='Sunday'].head()"
+    "df_friday.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4320    2.35\n",
+       "4321    2.40\n",
+       "4322    2.39\n",
+       "4323    2.38\n",
+       "4324    2.33\n",
+       "Name: CO2, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 일요일 CO2\n",
+    "df['CO2'][df['weekday']=='Sunday'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +854,7 @@
        "4324  Sunday  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +866,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4320    15.4\n",
+       "4321    15.3\n",
+       "4322    15.3\n",
+       "4323    15.3\n",
+       "4324    15.4\n",
+       "Name: Humidity, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 일요일의 Humidity\n",
+    "df['Humidity'][df['weekday']=='Sunday'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 일요일 관측값\n",
+    "df[df['weekday']=='Sunday'].head()\n",
+    "df_sunday = df[df['weekday']=='Sunday']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REG_DATE</th>\n",
+       "      <th>PM25</th>\n",
+       "      <th>PM100</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>TVOC</th>\n",
+       "      <th>CO2</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4320</th>\n",
+       "      <td>2020-04-05 00:00:00</td>\n",
+       "      <td>4.64</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4321</th>\n",
+       "      <td>2020-04-05 00:01:00</td>\n",
+       "      <td>4.93</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4322</th>\n",
+       "      <td>2020-04-05 00:02:00</td>\n",
+       "      <td>4.93</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>2.39</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4323</th>\n",
+       "      <td>2020-04-05 00:03:00</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>19.7</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4324</th>\n",
+       "      <td>2020-04-05 00:04:00</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>1.53</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>Sunday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                REG_DATE  PM25  PM100  Temperature  Humidity  TVOC   CO2  \\\n",
+       "4320 2020-04-05 00:00:00  4.64   6.19         19.6      15.4  1.54  2.35   \n",
+       "4321 2020-04-05 00:01:00  4.93   6.19         19.6      15.3  1.54  2.40   \n",
+       "4322 2020-04-05 00:02:00  4.93   6.19         19.6      15.3  1.55  2.39   \n",
+       "4323 2020-04-05 00:03:00  4.06   6.19         19.7      15.3  1.55  2.38   \n",
+       "4324 2020-04-05 00:04:00  3.48   6.19         19.6      15.4  1.53  2.33   \n",
+       "\n",
+       "     weekday  \n",
+       "4320  Sunday  \n",
+       "4321  Sunday  \n",
+       "4322  Sunday  \n",
+       "4323  Sunday  \n",
+       "4324  Sunday  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sunday.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sunday.to_csv('air_sunday.csv', index=False)\n",
+    "df_friday.to_csv('air_friday.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +1048,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +1068,7 @@
        "18.1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +1088,7 @@
        "25.2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1018,7 +1211,7 @@
        "684  Thursday  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1332,7 @@
        "10673  Thursday  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1355,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1375,7 @@
        "18.1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1496,7 @@
        "5070  Sunday  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1617,7 @@
        "25741  Sunday  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1645,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1721,7 @@
        "5071  Sunday  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1849,7 @@
        "25741  Sunday  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1886,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1806,16 +1999,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a062914e88>]"
+       "[<matplotlib.lines.Line2D at 0x17a204fdbc8>]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1846,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +2048,7 @@
        "Text(0.5, 1.0, 'CO2')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1893,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +2187,7 @@
        "S6  0.106732  0.091029  0.369453  0.978920  0.349379  1.000000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2034,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2244,7 @@
        "Name: Temperature, dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2142,7 +2335,7 @@
        "Name: Temperature, Length: 25920, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2153,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
