--- a/CSV_Data_Processing.ipynb
+++ b/CSV_Data_Processing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,9 @@
     "try:\n",
     "    #df = pd.read_csv(localurl, skiprows = 1)\n",
     "    #df = pd.read_csv(localurl)\n",
-    "    dateparse = lambda dates: [pd.datetime.strptime(d, '%Y-%m-%d %H:%M') for d in dates] \n",
-    "    df = pd.read_csv(localurl, parse_dates=['REG_DATE'], date_parser=dateparse)\n",
+    "    #dateparse = lambda dates: [pd.datetime.strptime(d, '%Y-%m-%d %H:%M') for d in dates] \n",
+    "    #df = pd.read_csv(localurl, parse_dates=['REG_DATE'], date_parser=dateparse)\n",
+    "    df = pd.read_csv(localurl, parse_dates=['REG_DATE'])\n",
     "except  OSError as err:\n",
     "    print(\"OS error: {0}\".format(err))\n",
     "except ValueError as err:\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2020-04-02 00:00:00</td>\n",
        "      <td>7.54</td>\n",
@@ -83,7 +84,7 @@
        "      <td>4.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2020-04-02 00:01:00</td>\n",
        "      <td>7.83</td>\n",
@@ -94,7 +95,7 @@
        "      <td>4.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>2020-04-02 00:02:00</td>\n",
        "      <td>7.54</td>\n",
@@ -105,7 +106,7 @@
        "      <td>4.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>2020-04-02 00:03:00</td>\n",
        "      <td>7.83</td>\n",
@@ -116,7 +117,7 @@
        "      <td>4.17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>2020-04-02 00:04:00</td>\n",
        "      <td>8.12</td>\n",
@@ -139,7 +140,7 @@
        "4   5 2020-04-02 00:04:00   8.12    6.19         21.6      22.1  1.85  4.20"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>25915</th>\n",
+       "      <td>25915</td>\n",
        "      <td>25916</td>\n",
        "      <td>2020-04-19 23:55:00</td>\n",
        "      <td>4.35</td>\n",
@@ -198,7 +199,7 @@
        "      <td>7.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25916</th>\n",
+       "      <td>25916</td>\n",
        "      <td>25917</td>\n",
        "      <td>2020-04-19 23:56:00</td>\n",
        "      <td>4.21</td>\n",
@@ -209,7 +210,7 @@
        "      <td>7.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25917</th>\n",
+       "      <td>25917</td>\n",
        "      <td>25918</td>\n",
        "      <td>2020-04-19 23:57:00</td>\n",
        "      <td>5.07</td>\n",
@@ -220,7 +221,7 @@
        "      <td>7.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25918</th>\n",
+       "      <td>25918</td>\n",
        "      <td>25919</td>\n",
        "      <td>2020-04-19 23:58:00</td>\n",
        "      <td>3.90</td>\n",
@@ -231,7 +232,7 @@
        "      <td>7.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25919</th>\n",
+       "      <td>25919</td>\n",
        "      <td>25920</td>\n",
        "      <td>2020-04-19 23:59:00</td>\n",
        "      <td>4.64</td>\n",
@@ -261,7 +262,7 @@
        "25919  7.70  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +311,134 @@
     " \n",
     "df['weekday'] = df['REG_DATE'].dt.dayofweek.map(dayOfWeek)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NO</th>\n",
+       "      <th>REG_DATE</th>\n",
+       "      <th>PM2.5</th>\n",
+       "      <th>PM10.0</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Huminity</th>\n",
+       "      <th>TVOC</th>\n",
+       "      <th>CO2</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-04-02 00:00:00</td>\n",
+       "      <td>7.54</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>4.16</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-04-02 00:01:00</td>\n",
+       "      <td>7.83</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-04-02 00:02:00</td>\n",
+       "      <td>7.54</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1.86</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020-04-02 00:03:00</td>\n",
+       "      <td>7.83</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>4.17</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-04-02 00:04:00</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>22.1</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   NO            REG_DATE  PM2.5  PM10.0  Temperature  Huminity  TVOC   CO2  \\\n",
+       "0   1 2020-04-02 00:00:00   7.54    6.19         21.6      22.1  1.86  4.16   \n",
+       "1   2 2020-04-02 00:01:00   7.83    6.19         21.6      22.1  1.85  4.15   \n",
+       "2   3 2020-04-02 00:02:00   7.54    6.19         21.6      22.1  1.86  4.20   \n",
+       "3   4 2020-04-02 00:03:00   7.83    6.19         21.5      22.1  1.81  4.17   \n",
+       "4   5 2020-04-02 00:04:00   8.12    6.19         21.6      22.1  1.85  4.20   \n",
+       "\n",
+       "    weekday  \n",
+       "0  Thursday  \n",
+       "1  Thursday  \n",
+       "2  Thursday  \n",
+       "3  Thursday  \n",
+       "4  Thursday  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#관측값(관찰값)\n",
+    "df.head()"
    ]
   },
   {
