--- a/CSV_Data_Processing.ipynb
+++ b/CSV_Data_Processing.ipynb
@@ -23,6 +23,8 @@
    "outputs": [],
    "source": [
     "localurl='April_sensor_data.csv'\n",
+    "#localurl= \"https://raw.githubusercontent.com/iceman67/DataAnalysis/master/April_sensor_data.csv\"\n",
+    "\n",
     "try:\n",
     "    #df = pd.read_csv(localurl, skiprows = 1)\n",
     "    #df = pd.read_csv(localurl)\n",
